--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
@@ -1,35 +1,7 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "blog";
     Page.Title = "Blog general - Brokolee Software";
 }
-
-<style>
-    .caja{
-        box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
-    padding: 10px;
-    margin-top: 30px;
-    background-color: #fff;
-    }
-
-    .fecha span {
-    float: right;
-    font-size: 16px;
-    color: cornflowerblue;
-}
-</style>
-
-
-
-<link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-@*
-<link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link href="~/assets/css/blog.css" rel="stylesheet" />
-*@
-
-
 
 <div class="page-content-wrapper">
 
@@ -52,14 +24,21 @@
                 </div>
             </div>
         </div>
-
-        <!-- back button -->
-        @*<div class="row pb-4">
-                <div class="col-md-6">
-                    <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+        <!-- end page title end breadcrumb -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card m-b-30">
+                    <div class="card-body">
+                        <div class="input-group">
+                            <input type="text" id="search-input" name="example-input1-group2" class="form-control" placeholder="Buscar entrada en el blog...">
+                            <span class="input-group-append">
+                                <button type="button" id="search-button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
+                            </span>
+                        </div>
+                    </div>
                 </div>
-            </div>*@
-
+            </div>
+        </div><!--end row-->
         <div class="row">
             <div class="col-12">
                 <div class="card">
@@ -69,117 +48,139 @@
                                 <h5 class="d-inline-block">Últimas entradas</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregarblog", "comunicaciones", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear entrada</button></a>
+                                <a href="@Url.Action("agregarblog", "comunicaciones", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
                             </div>
                         </div>
-
-
+                        <div class="table-responsive">
+                            <table id="dataTable-documentos-legales" class="table table-striped table-bordered normal"
+                                   style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Título</th>
+                                        <th>Autor</th>                                        
+                                        <th>Fecha de publicación</th>
+                                        <th>Opciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.blogList)
+                                    {
+                                        <tr>
+                                            <td>@item.title</td>
+                                            <td>@item.author</td>
+                                            <td class="text-center">@Convert.ToDateTime(item.blogdate).ToString("MM/dd/yyyy HH:mm")</td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("verblog", "comunicaciones", new { area = "webmaster", blogID = item.id })">
+                                                    <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div><!-- end row -->
         <!-- back button -->
+        <div class="row pb-4">
+            <div class="col-md-6">
+                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+            </div>
+        </div>
         <!-- end back button -->
 
     </div><!-- container -->
-    <!-- end back button -->
-    <!-- end page title end breadcrumb -->
-    <div id="divContenido"></div>
+
+</div> <!-- Page content Wrapper -->
+@*<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
+
+
+        console.log('@Model.Content');
+
+
+           var url = "@Url.Action("ArmarBlogs", "comunicaciones", new { area = "webmaster" })";
+         var compania = new Array();
+        var formData = new FormData();
+
+        formData.append('ID', '@Model.Content');
+
+        compania.push(formData);
+        $.ajax({
+            url: url,
+            type: "post",
+            data: compania[0],
+                    success: function (result) {
+                        $("#divContenido").append(result);
+                    },
+                    processData: false,
+                    contentType: false
+        });
+        //.ToString()
 
 
 
-
-    <br/>
-    <div class="row pb-4">
-        <div class="col-md-6">
-            <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
-        </div>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script>
+        $(document).ready(function () {
+              $(".Eliminar").on('click', function () {
+                var url = "@Url.Action("eliminarBlog", "comunicaciones", new { area = "webmaster"})";
+                 var compania = new Array();
+              var formData = new FormData();
 
 
-    console.log('@Model.Content');
+                 var id = $(".Eliminar").attr('data-id');
+                formData.append('blogID',  id);
 
-
-       var url = "@Url.Action("ArmarBlogs", "comunicaciones", new { area = "webmaster" })";
-     var compania = new Array();
-    var formData = new FormData();
-
-    formData.append('ID', '@Model.Content');
-
-    compania.push(formData);
-    $.ajax({
-        url: url,
-        type: "post",
-        data: compania[0],
-                success: function (result) {
-                    $("#divContenido").append(result);
-                },
-                processData: false,
-                contentType: false
-    });
-    //.ToString()
-
-       
-
-    $(document).ready(function () {
-          $(".Eliminar").on('click', function () {
-            var url = "@Url.Action("eliminarBlog", "comunicaciones", new { area = "webmaster"})";
-             var compania = new Array();
-          var formData = new FormData();
-
-         
-             var id = $(".Eliminar").attr('data-id');
-            formData.append('blogID',  id);
-
-            compania.push(formData);
-            $.ajax({
-                url: url,
-                type: "post",
-                data: compania[0],
-                        success: function (result) {
-                            if (result.result == "success") {
-                                location.reload();
-                            } else {
-                                alert("Error al eliminar el blog: "+ result.exception);
-                            }
-                        },
-                        processData: false,
-                        contentType: false
+                compania.push(formData);
+                $.ajax({
+                    url: url,
+                    type: "post",
+                    data: compania[0],
+                            success: function (result) {
+                                if (result.result == "success") {
+                                    location.reload();
+                                } else {
+                                    alert("Error al eliminar el blog: "+ result.exception);
+                                }
+                            },
+                            processData: false,
+                            contentType: false
+                });
             });
+
+             $(".Like").on('click', function () {
+                var url = "@Url.Action("AgregarLikeblog", "comunicaciones", new { area = "webmaster" })";
+                 var compania = new Array();
+              var formData = new FormData();
+
+
+                 var id = $(".Like").attr('data-id');
+                formData.append('ID',  id);
+
+                compania.push(formData);
+                $.ajax({
+                    url: url,
+                    type: "post",
+                    data: compania[0],
+                            success: function (result) {
+                                //  $("#divContenido").append(result);
+                                console.log(result);
+                            },
+                            processData: false,
+                            contentType: false
+                });
+            });
+
         });
 
-         $(".Like").on('click', function () {
-            var url = "@Url.Action("AgregarLikeblog", "comunicaciones", new { area = "webmaster" })";
-             var compania = new Array();
-          var formData = new FormData();
-
-         
-             var id = $(".Like").attr('data-id');
-            formData.append('ID',  id);
-
-            compania.push(formData);
-            $.ajax({
-                url: url,
-                type: "post",
-                data: compania[0],
-                        success: function (result) {
-                            //  $("#divContenido").append(result);
-                            console.log(result);
-                        },
-                        processData: false,
-                        contentType: false
-            });
-        });
-
-    });
-     
 
 
 
-</script>
+    </script>*@
 
 <!-- Page content Wrapper -->
 @*<div class="row">
