--- a/WebApplication1/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Views/comunicaciones/verblog.cshtml
@@ -17,6 +17,10 @@
         font-size: 16px;
         color: cornflowerblue;
     }
+
+    .page-content-wrapper{
+        margin-bottom: 10px!important;
+    }
 </style>
 
 
@@ -36,7 +40,7 @@
                     </div>
 
                     <div class="float-right">
-                        <ul class="breadcrumb float-md-right">
+                        <ul c{lass="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item active">Ver blog</li>
                         </ul>
@@ -54,6 +58,41 @@
         </div>
         <!-- end back button -->
         <div id="divContenido"></div>
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-body">
+        <div class="row form-material">
+            <div class="col-md-6">
+                <h5 class="d-inline-block">Comentarios</h5>
+            </div>
+
+        </div>
+
+        <div class="table-responsive">
+            <table id="dataTable-documentos-legales"
+                   class="table table-striped table-bordered normal"
+                   style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Comentario</th>
+                        <th>Fecha de publicación</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.blogcommentList)
+                    {
+                        <tr>
+                            <td>@item.name</td>
+                            <td>@item.comment.</td>
+                            <td class="text-center">@Convert.ToDateTime(item.postdate).ToString("MM/dd/yyyy HH:mm")</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
 
         <!-- back button -->
         <div class="row pb-4">
@@ -64,8 +103,9 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
 
 
     console.log('@Model.Content');
@@ -147,4 +187,4 @@
 
 
 
-</script>
+    </script>
