correcciones en el blog, multiples comunidades por admin, correccion en Contacto

--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
@@ -97,6 +97,12 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+<script>
+    $('table').dataTable({
+        "pageLength": -1,
+        "order": [[0,"desc"]]
+    });
+</script>
 @*<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script>
 
