--- a/WebApplication1/Areas/coadmin/Views/contacto/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/ver.cshtml
@@ -52,7 +52,7 @@
                                 <div class="col-sm-9">
                                     @if (Model.editContactInfo == null)
                                     {
-                                        <input class="form-control" readonly type="email" value="" required name="company_admin"
+                                        <input class="form-control" readonly type="text" value="" required name="company_admin"
                                                placeholder="Compañía de administración" id="example-email-input"
                                                data-toggle="tooltip" title="Nombre de compañía de administración" />
                                     }
