--- a/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editarTitulo.cshtml
@@ -104,7 +104,7 @@
                             <div class="form-group row">
                                 <label label="example-date-input-acq-date" class="col-sm-3 col-form-label">Fecha de adquisición</label>
                                 <div class="col-sm-9">
-                                    <input required
+                                    <input required autocomplete="off"
                                            id="fecha11"
                                            name="acq_date"
                                            value="@Convert.ToDateTime(Model.titulo.acq_date).ToString("MM/dd/yyyy")" />
