--- a/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
@@ -105,14 +105,28 @@
                 <!-- LOGO CONDOMINIO -->
                 <div class="m-b-10 title-condominio">
                     <div class="text-center">
-                        @try
+                        <h6>@Model.curUser.first_name1 @Model.curUser.last_name1</h6>
+                        @*<a class="text-success" href="#">@Model.communityList<span class="waves-block">@Model.communityApart</span></a>*@
+                        @*@if (Model.communityList.Count == 0)
                         {
-                            <h6>@Model.curUser.first_name1 @Model.curUser.last_name1</h6>
+                            <span class="waves-block">Sin comunidades</span>
                         }
-                        catch (Exception ex)
+                        else
                         {
-                            <h6></h6>
-                        }
+                            <select class="form-control selectComunidad" onchange="ChangeCommunity(this)" name="communitySelect">
+                                @foreach (var item in Model.communityList)
+                                {
+                                    if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
+                                    {
+                                        <option value="@item.id" selected>@item.first_name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.id">@item.first_name</option>
+                                    }
+                                }
+                            </select>
+                        }*@
                         <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
                     </div>
 
