--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -108,7 +108,7 @@
                             <label label="example-date-input" class="col-sm-3 col-form-label">Fecha de adquisición</label>
                             <div class="col-sm-9">
 
-                                <input name="acq_date"
+                                <input required name="acq_date" autocomplete="off"
                                        id="fecha1" />
                                 <small class="form-text text-muted">Mes / día / año</small>
                             </div>
