--- a/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
@@ -107,6 +107,7 @@
                                     <input required
                                            id="fecha11"
                                            name="acq_date"
+                                           autocomplete="off"
                                            value="@Convert.ToDateTime(Model.titulo.acq_date).ToString("MM/dd/yyyy")" />
 
                                     @*  <small class="form-text text-muted">dia / Mes / año</small>*@
