--- a/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/informacion.cshtml
@@ -49,7 +49,7 @@
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Compañía administración</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="email" value=""
+                                        <input class="form-control" type="text" value=""
                                                required name="company_admin"
                                                placeholder="Compañía administración" id="example-email-input"
                                                data-toggle="tooltip" title="Nombre de compañía de administración" />
