--- a/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <div class="form-group row">
+                            @*<div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Administrador</label>
                                 <div class="col-sm-9">
                                     <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
@@ -77,7 +77,7 @@
                                     <small class="form-text text-muted">Listado de administradores</small>
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
+                            <div class="form-divider"></div>*@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Paquete</label>
                                 <div class="col-sm-9">
