--- a/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <div class="form-group row">
+                            @*<div class="form-group row">
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
                                 <div class="col-sm-9">
 
@@ -91,10 +91,9 @@
 
                                         }
                                     </select>
-                                    @* <small class="form-text text-muted">Email del administrador</small>*@
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
+                            <div class="form-divider"></div>*@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Paquete</label>
                                 <div class="col-sm-9">
