--- a/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/ver.cshtml
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                         <div class="form-divider"></div>
-                        <div class="form-group row">
+                        @*<div class="form-group row">
                             <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
                             <div class="col-sm-9">
                                 <select class="form-control disabled" id="AdminSelect" multiple="multiple" name="adminlist" disabled
@@ -80,7 +80,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-divider"></div>
+                        <div class="form-divider"></div>*@
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Paquete</label>
                             <div class="col-sm-9">
