--- a/WebApplication1/Views/control/community.cshtml
+++ b/WebApplication1/Views/control/community.cshtml
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6">
-                                <h5 class="d-inline-block">Listado de comunidades administradas</h5>
+                                <h5 class="d-inline-block">Listado de comunidades adquiridas</h5>
                             </div>
                             <div class="col-md-6 mb-1">
 
