--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/blog.cshtml
@@ -97,6 +97,15 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+<script>
+
+    $(document).ready(function () {
+        $('#dataTable-directorio-suplidores').DataTable({
+            "aaSorting": [[2, "desc"]]
+        });
+
+    });
+</script>
 @*
     <script>
 
