--- a/WebApplication1/Areas/webmaster/Views/administradores/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/agregar.cshtml
@@ -4,11 +4,6 @@
     Page.Title = "Agregar administrador - Brokolee Software";
 }
 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link href="~/Content/Select-Multiple.css" rel="stylesheet" />
-
-
 <style media="screen">
     #inputGroupFile04 {
         max-width: 150px;
@@ -22,6 +17,8 @@
         height: 130px;
         margin: 0 auto;
     }
+
+
 </style>
 
 <div class="page-content-wrapper">
@@ -139,11 +136,11 @@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
+                           
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
-                                    <select class="form-control" multiple="multiple" name="communityID"
-                                            data-toggle="tooltip" title="Nombre de la comunidad">
+                                    <select name="communityID" multiple class="selectpicker form-control" data-selected-text-format="count > 2" data-container="body" data-live-search="true" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="true">
                                         @foreach (var item in Model.communityList)
                                         {
                                             <option value="@item.id">@item.first_name</option>
@@ -151,24 +148,10 @@
                                     </select>
                                     <small class="form-text text-muted">Lista de comunidades</small>
                                 </div>
+                                </div>
+                                <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                                <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                             </div>
-                            @*<div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Comunidad</label>
-                                    <div class="col-sm-9">
-                                        <select class="form-control" name="communityID2" required
-                                                data-toggle="tooltip" title="Categoría del suplidor">
-                                            @foreach (var item in Model.communityList)
-                                            {
-                                                <option value="@item.id">@item.first_name</option>
-                                            }
-                                        </select>
-                                        <small class="form-text text-muted">Categoría del suplidor</small>
-                                    </div>
-                                </div>*@
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-                        </div>
                     }
                 </div>
             </div>
@@ -185,35 +168,33 @@
 
 </div> <!-- Page content Wrapper -->
 
-<script src="~/Scripts/Select-Multiple.js"></script>
+    <script type="text/javascript">
 
-<script type="text/javascript">
+        (function () {
 
-    (function () {
+            function filePreview(input) {
+                if (input.files && input.files[0]) {
 
-        function filePreview(input) {
-            if (input.files && input.files[0]) {
+                    var reader = new FileReader();
 
-                var reader = new FileReader();
-
-                reader.onload = function (e) {
+                    reader.onload = function (e) {
 
 
-                    $('#img-fluid').html("<img class='garritas' src='" + e.target.result + "'/>");
+                        $('#img-fluid').html("<img class='garritas' src='" + e.target.result + "'/>");
+
+                    }
+
+                    reader.readAsDataURL(input.files[0]);
 
                 }
 
-                reader.readAsDataURL(input.files[0]);
-
             }
-
-        }
         $('#inputGroupFile04').change(function () {
 
             filePreview(this);
-        });
+    });
 
-    })();
+})();
 
 
 
