--- a/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
@@ -4,12 +4,6 @@
     Page.Title = "Editar administrador - Brokolee Software";
 }
 
-<script src="~/Scripts/jquery-3.1.1.min.js"></script>
-
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link href="~/Content/Select-Multiple.css" rel="stylesheet" />
-
 <style media="screen">
     #inputGroupFile04 {
         max-width: 130px;
@@ -153,12 +147,11 @@
                                     @* <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
+                            <div class="form-divider"></div>                            
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
-                                    <select class="form-control" multiple="multiple" name="communityID" required
-                                            data-toggle="tooltip">
+                                    <select name="communityID" multiple class="selectpicker form-control" data-selected-text-format="count > 2" data-container="body" data-live-search="true" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="true">
                                         @foreach (var item in Model.communityList)
                                         {
                                             bool bandera = true;
@@ -179,30 +172,30 @@
 
                                         }
                                     </select>
-                                    @*<small class="form-text text-muted">Categoría del suplidor</small>*@
+                                    <small class="form-text text-muted">Lista de comunidades</small>
                                 </div>
                             </div>
                             @*<div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Comunidad</label>
-                                    <div class="col-sm-9">
-                                        <select class="form-control" name="communityID2" required
-                                                data-toggle="tooltip" title="Categoría del suplidor">
-                                            @foreach (var item in Model.communityList)
-                                            {
-                                                if (Model.communityID2 == item.id)
-                                                {
-                                                    <option value="@item.id" selected>@item.first_name</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@item.id">@item.first_name</option>
-                                                }
-                                            }
-                                        </select>
-                                        <small class="form-text text-muted">Categoría del suplidor</small>
-                                    </div>
-                                </div>*@
+        <div class="form-group row">
+            <label class="col-sm-3 col-form-label">Comunidad</label>
+            <div class="col-sm-9">
+                <select class="form-control" name="communityID2" required
+                        data-toggle="tooltip" title="Categoría del suplidor">
+                    @foreach (var item in Model.communityList)
+                    {
+                        if (Model.communityID2 == item.id)
+                        {
+                            <option value="@item.id" selected>@item.first_name</option>
+                        }
+                        else
+                        {
+                            <option value="@item.id">@item.first_name</option>
+                        }
+                    }
+                </select>
+                <small class="form-text text-muted">Categoría del suplidor</small>
+            </div>
+        </div>*@
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
@@ -223,7 +216,6 @@
 
 </div> <!-- Page content Wrapper -->
 
-<script src="~/Scripts/Select-Multiple.js"></script>
 <script type="text/javascript">
 
     (function () {
