--- a/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
@@ -93,7 +93,7 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button></a>
+                                @*<a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button></a>*@
                             </div>
                         </div>
 
